# weirdsheeplabs-cdn

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
tests/unit/: test_weirdsheeplabs_cdn_stack.py
weirdsheeplabs_cdn/: infrastructure.py  weirdsheeplabs_cdn_stack.py
